<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MHSetEditor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="abilities">Árbol hab.</string>
    <string name="background">background</string>
    <string name="item">item</string>
    
    <string name="head">Head</string>
    <string name="chest">Chest</string>
    <string name="hand">Hand</string>
    <string name="waist">Waist</string>
    <string name="feet">Feet</string>
    <string name="charm">Charm</string>
    
    <string name="salud">Salud</string>
    <string name="resistencia">Resist.</string>
    <string name="oxigeno">Oxígeno</string>
	<string name="ataque">Ataque</string>
	<string name="defensa">Defensa</string>
	<string name="maxDef">Def Max.</string>
	
	<string name="fuego">Fuego</string>
    <string name="agua">Agua</string>
    <string name="hielo">Hielo</string>
	<string name="trueno">Trueno</string>
	<string name="dragon">Dragón</string>
	
	<string name="value0">0</string>
    <string name="value100">100</string>
    
    <string name="habilidades">Hab. Activas</string>
    
    <color name="white">#FFFFFF</color>
    <color name="transparent">#00ffffff</color>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="image_gallery_description">button image</string>
    <string name="image_workshop_description">Workshop button</string>

	
</resources>
